--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mytest</groupId>
-    <artifactId>scala2-learning</artifactId>
+    <artifactId>scala2-maven-intellij</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
