--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <scala.version>2.13.6</scala.version>
         <scala.compat.version>2.13</scala.compat.version>
+        <scoverage.plugin.version>1.4.1</scoverage.plugin.version>
+        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
@@ -51,12 +53,6 @@
                             <goal>compile</goal>
                             <goal>testCompile</goal>
                         </goals>
-                        <configuration>
-                            <args>
-                                <arg>-dependencyfile</arg>
-                                <arg>${project.build.directory}/.scala_dependencies</arg>
-                            </args>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -89,17 +85,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <skipTests>true</skipTests>-->
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <reportsDirectory>${project.build.directory}/unit-tests-report</reportsDirectory>
-                    <junitxml>.</junitxml>
+<!--                    <reportsDirectory>${project.build.directory}/unit-tests-report</reportsDirectory>-->
+<!--                    <junitxml>.</junitxml>-->
                     <!-- https://stackoverflow.com/questions/17770003/scalatest-maven-configuration-show-time-measures-for-each-test -->
                     <!-- http://doc.scalatest.org/2.1.3/index.html#org.scalatest.tools.Runner%24@configuringReporters -->
                     <filereports>WDF TestSuite.txt</filereports>
@@ -113,6 +109,55 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- test coverage: https://github.com/scoverage/scoverage-maven-plugin -->
+            <plugin>
+                <groupId>org.scoverage</groupId>
+                <artifactId>scoverage-maven-plugin</artifactId>
+                <version>${scoverage.plugin.version}</version>
+                <configuration>
+                    <scalacPluginVersion>1.4.1</scalacPluginVersion>
+                    <highlighting>true</highlighting>
+                    <minimumCoverage>40</minimumCoverage>
+                    <failOnMinimumCoverage>true</failOnMinimumCoverage>
+                    <aggregate>true</aggregate>
+                    <!-- hack to run test only once
+                        https://github.com/scoverage/scoverage-maven-plugin/issues/61 -->
+                    <additionalForkedProjectProperties>skipTests=false</additionalForkedProjectProperties>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>scoverage_unit</id>
+                        <goals>
+                            <goal>check</goal> <!-- or integration-check -->
+                        </goals>
+                        <phase>test</phase> <!-- or any other phase -->
+                    </execution>
+                    <execution>
+                        <id>scoverage_integration</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <phase>integration-test</phase>
+                    </execution>
+                </executions>
+             </plugin>
         </plugins>
     </build>
+
+     <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.scoverage</groupId>
+                <artifactId>scoverage-maven-plugin</artifactId>
+                <version>${scoverage.plugin.version}</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report-only</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
